--- a/app/views/users_mailer/INLINECSS_passwordAssistance.html
+++ b/app/views/users_mailer/INLINECSS_passwordAssistance.html
@@ -360,8 +360,15 @@ background: #CC0000 !important;
                                   <h4 style="color: #0073a5; display: block; font-family: 'Open Sans','Helvetica', 'Arial', sans-serif; font-weight: lighter; text-align: center; line-height: 1.3; word-break: normal; font-size: 28px; border-bottom-color: #d2d2d2; border-bottom-width: 1px; border-bottom-style: solid; margin: 0; padding: 15px;" align="center">myWebRoom Password Assistance</h4>
                                 </td>
                               </tr><tr style="vertical-align: top; text-align: left; padding: 0;" align="left"><td class="text-pad message_content_message" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; padding: 0px 10px 30px;" align="left" valign="top">
-                                  <br /><p class="lead" style="color: #222222; display: block; font-family: 'Open Sans','Helvetica', 'Arial', sans-serif; font-weight: normal; text-align: left; line-height: 19px; font-size: 14px; margin: 0; padding: 0 30px;" align="left"><span style="font-weight: bolder;">Hey %%FIRSTNAME,</span></p>
-                                  <br /><p style="color: #222222; display: block; font-family: 'Open Sans','Helvetica', 'Arial', sans-serif; font-weight: normal; text-align: left; line-height: 19px; font-size: 14px; margin: 0; padding: 0 30px;" align="left">Forgot your password? No problem. Just click <a href="%%WEBSITE" style="color: #0073a5; text-decoration: none;"><span>here</span></a> to reset it. Have questions or need help? You can reach us at <a href="mailto:info@mywebroom.com" target="_blank" style="color: #0073a5; text-decoration: none;"><span>info@mywebroom.com.</span></a></p>
+                                  <br /><p class="lead" style="color: #222222; display: block; font-family: 'Open Sans','Helvetica', 'Arial', sans-serif; font-weight: normal; text-align: left; line-height: 19px; font-size: 14px; margin: 0; padding: 0 30px;" align="left">
+                                    <span style="font-weight: bolder;">
+                                    <% if @user_profile.firstname.blank? %>
+                                      Hey <%= @user.username %>,
+                                    <% else %>
+                                     Hey <%= @user_profile.firstname %>,
+                                    <%end%>
+                                    </span></p>
+                                  <br /><p style="color: #222222; display: block; font-family: 'Open Sans','Helvetica', 'Arial', sans-serif; font-weight: normal; text-align: left; line-height: 19px; font-size: 14px; margin: 0; padding: 0 30px;" align="left">Forgot your password? No problem. Just click <a href="<%= edit_password_reset_url(@user.password_reset_token) %>" style="color: #0073a5; text-decoration: none;"><span>here</span></a> to reset it. Have questions or need help? You can reach us at <a href="mailto:info@mywebroom.com" target="_blank" style="color: #0073a5; text-decoration: none;"><span>info@mywebroom.com.</span></a></p>
 
                                   <br /><p style="color: #222222; display: block; font-family: 'Open Sans','Helvetica', 'Arial', sans-serif; font-weight: normal; text-align: left; line-height: 19px; font-size: 14px; margin: 0; padding: 0 30px;" align="left">
                                     Thanks for using myWebRoom!
@@ -379,7 +386,12 @@ background: #CC0000 !important;
                       
                 <table class="twelve columns message_footer_content" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 580px; margin: 0 10%; padding: 0;"><tr style="vertical-align: top; text-align: left; padding: 0;" align="left"><td class="left-text-pad" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; padding: 0px 0px 10px 10px;" align="left" valign="top">
 
-                      <p style="color: #222222; display: block; font-family: 'Open Sans','Helvetica', 'Arial', sans-serif; font-weight: normal; text-align: left; line-height: 19px; font-size: 12px; margin: 0; padding: 10px 0;" align="left">This email is for myWebRoom.com resident %%FIRSTNAME.
+                      <p style="color: #222222; display: block; font-family: 'Open Sans','Helvetica', 'Arial', sans-serif; font-weight: normal; text-align: left; line-height: 19px; font-size: 12px; margin: 0; padding: 10px 0;" align="left">This email is for myWebRoom.com resident 
+                        <% if @user_profile.firstname.blank? %>
+                          <%= @user.username %>
+                        <% else %>
+                          <%= @user_profile.firstname %>
+                        <% end %>
                         <br />
                         © 2013, Rooms Inc.
                       </p>
