fix password reset

--- a/app/assets/stylesheets/shop.css.scss
+++ b/app/assets/stylesheets/shop.css.scss
@@ -87,8 +87,14 @@
 
 
 #shop_green_button{
-  width: 362px;
+  padding: 6px 120px;
   text-align: left;
+
+
+}
+#shop_btn_container{
+  text-align: left;
+
 
 }
 
