change some name

--- a/app/assets/stylesheets/shop.css.scss
+++ b/app/assets/stylesheets/shop.css.scss
@@ -87,16 +87,14 @@
 
 
 #shop_green_button{
-  padding: 6px 120px;
+  width: 362px;
   text-align: left;
-
-
+  background-repeat:no-repeat;
+  background-size: contain;
+  background-position: -70px 0px;
+  padding: 6px 0px 6px 47px;
 }
-#shop_btn_container{
-  text-align: left;
 
-
-}
 
 #shop_see_it_in_your_room_before_you_buy{
   font-size:13px;
