--- a/app/views/shop/show_items_design.html.erb
+++ b/app/views/shop/show_items_design.html.erb
@@ -58,22 +58,13 @@
         <br/>
 
         <form>
-          <input type="button" id="shop_green_button1" class="green_button green_button_light"
+          <input type="button"
+                 id="shop_green_button"
+                 class="green_button green_button_light"
                  value="Buy at <%=@items_design_btn_url_name.to_s%>"
-
-                 onclick="window.location.href='<%=@items_design.product_url%>'">
+                 onclick="window.location.href='<%=@items_design.product_url%>'"
+                 style="background-image: url('<%= @static_content.image_name %>')">
         </form>
-
-
-        <div id="shop_btn_container">
-        <a id="shop_green_button" class="green_button green_button_light" href="#">
-          <%= cl_image_tag(@static_content.image_name,
-                           :transformation => { :width => 80, :height => 72, :x => 40, :y => 0, :crop => :crop },
-                           :width => 30, :height => 15, :crop => :fill)%>
-          Cancel</a>
-        </div>
-
-
 
       </div>
 
