--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -164,6 +164,181 @@
             </ul>
         </div>
 
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="span6 about-us-blue-picture">
+                <%= cl_image_tag("italy.png", height: 420, width: 420, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                </div>
+                <div class="span6">
+                    <h4 class="about-us-header">JOIN THE TEAM</h4>
+                    <p class="about-us-header">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                    <ul class="about-us-header">
+                        <li>Programmers</li>
+                        <li>Designers</li>
+                        <li>Marketing</li>
+                        <li>Interior Designer</li>
+                        <li>Other</li>
+                    </ul>
+                    <p class="about-us-header">
+                        SUBMIT YOUR RESUME
+                    </p>
+                    <p class="about-us-header">
+                        career@mywebroom.com
+                    </p>
+                </div>
+            </div> <!-- ROW -->
+        </div> <!-- ABOUT US BLUE -->
+
+
+         <div class="container-fluid about-us-blue">
+            <div class="row-fluid">
+                <div class="span6">
+                    <h4 class="about-us-header about-us-white-text">PARTNERS</h4>
+                    <p class="about-us-header about-us-white-text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 15s. Lorem Ipsum has been the industry's standard dummy text ever since the 15s.
+                    </p>
+                    <div class="container-fluid">
+                        <div class="row-fluid">
+                            <div class="span4">
+                                <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                            <div class="span4">
+                                 <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                            <div class="span4">
+                                <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="span4 partner-padding">
+                                <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                            <div class="span4 partner-padding">
+                                 <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                            <div class="span4 partner-padding">
+                                <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="span4">
+                                <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                            <div class="span4">
+                                 <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                            <div class="span4">
+                                <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                        </div>
+                    </div> <!-- CONTAINER FLUID -->
+                </div>
+                <div class="span6 about-us-blue-picture">
+                <%= cl_image_tag("thinking-guy.png", height: 420, width: 420, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                </div>
+            </div> <!-- ROW -->
+        </div> <!-- ABOUT US BLUE -->
+
+
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="span6 about-us-blue-picture">
+                <%= cl_image_tag("phone-guy.png", height: 420, width: 420, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                </div>
+                <div class="span6">
+                    <h4 class="about-us-header">FEEDBACK</h4>
+                    <p class="about-us-header">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentiall unchanged. It was popularised int he 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                    <p class="about-us-header">
+                        SEND FEEDBACK
+                    </p>
+                    <p class="about-us-header">
+                        feedback@mywebroom.com
+                    </p>
+                </div>
+            </div> <!-- ROW -->
+        </div> <!-- ABOUT US BLUE -->
+
+
+        <div class="container-fluid about-us-grey">
+            <div class="row-fluid">
+                <div class="span6">
+                    <h4 class="about-us-header">PRESS</h4>
+                    <p class="about-us-header">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 15s. Lorem Ipsum has been the industry's standard dummy text ever since the 15s.
+                    </p>
+                    <div class="container-fluid">
+                        <div class="row-fluid">
+                            <div class="span4">
+                                <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                            <div class="span4">
+                                 <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                            <div class="span4">
+                                <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="span4 partner-padding">
+                                <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                            <div class="span4 partner-padding">
+                                 <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                            <div class="span4 partner-padding">
+                                <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="span4">
+                                <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                            <div class="span4">
+                                 <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                            <div class="span4">
+                                <%= cl_image_tag("pure-modern.png", width: 180, height: 100, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                            </div>
+                        </div>
+                    </div> <!-- CONTAINER FLUID -->
+                </div>
+                <div class="span6 about-us-blue-picture">
+                <%= cl_image_tag("about-us-image.png", :height => 420, :width => 420, :crop => :fit, :quality => 50, :default_image => "default_image_all.png", :border => { :width => 4, :color => 'blue' }) %>
+                </div>
+            </div> <!-- ROW -->
+        </div> <!-- ABOUT US BLUE -->
+
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="span6 about-us-blue-picture">
+                <%= cl_image_tag("roomsy.png", height: 420, width: 420, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                </div>
+                <div class="span6">
+                    <h2 class="about-us-header">CONTACT US</h2>
+                    <p class="about-us-header">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                    <ul class="about-us-header">
+                        <li>Programmers</li>
+                        <li>Designers</li>
+                        <li>Marketing</li>
+                        <li>Interior Designer</li>
+                        <li>Other</li>
+                    </ul>
+                    <p class="about-us-header">
+                        SUBMIT YOUR RESUME
+                    </p>
+                    <p class="about-us-header">
+                        career@mywebroom.com
+                    </p>
+                </div>
+            </div> <!-- ROW -->
+        </div> <!-- ABOUT US BLUE -->
+
 
 
     </div> <!-- 2nd ABOUT US MARGIN -->
