--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,9 @@
 
     </div>
 
-
+<!--  if we're in a frame, kill it  -->
+<script>
+    if top != self top.location.replace(location);
+</script>
 </body>
 </html>
