--- a/app/views/rooms/xroom.html.erb
+++ b/app/views/rooms/xroom.html.erb
@@ -7,7 +7,6 @@
                 <%= link_to cl_image_tag(@static_content_logo.image_name, :width => 112, :height => 32 ), root_path , class:"brand",id:  "xroom_logo"  %>
             <% end %>
 
-
         </div>
     </header>
 
@@ -18,10 +17,9 @@
             <div id="xroom_entire_room_background">
                 <% if @bundle.theme.image_name.blank?  %>
                 <% else %>
-                    <%= cl_image_tag @bundle.theme.image_name,:quality => 50, :default_image => "default_image_all.png" %>
+                    <%= cl_image_tag @bundle.image_name_entire_room,:quality => 50, :default_image => "default_image_all.png" %>
                 <% end %>
             </div>
-
             <div id="xroom_entire_room_left" style="background-image: url('<%= @arrows_image %>')" >
               <%= link_to "", xroom_rooms_path(bundle_id:@bundle.id,moving_toward:'prev'), :method => :get, class:'xroom_entire_room_right_fill-div' %>
             </div>
@@ -33,6 +31,8 @@
 
           <div id="xroom_entire_room_btn"  >
             <%= link_to "Use this Room ",signup_path(bundle_id:@bundle.id),:class => "blue_button blue_button_light", :id => "xroom_entire_room_btn_blue"%>
+
+            <a href="javascript:signup_lightbox_show();">sign up!</a>
           </div>
 
 
