Begin styling landing page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,8 +43,8 @@
 
 <!--  if we're in a frame, kill it  -->
 <script>
-    // if top != self 
-    //   top.location.replace(location);
+    // if (top != self){ 
+    //   top.location.replace(location);}
 </script>
 </body>
 </html>
