--- a/app/assets/stylesheets/login_lightbox.css.scss
+++ b/app/assets/stylesheets/login_lightbox.css.scss
@@ -1,4 +1,4 @@
-#signup_lightbox-shadow {
+#login_lightbox-shadow {
   position: fixed;
   top: 0;
   left: 0;
@@ -9,7 +9,7 @@
   z-index: 1510;
 }
 
-#signup_lightbox{
+#login_lightbox{
   position: fixed;
   top: -500px;
   left:32%;
@@ -29,7 +29,7 @@
 
 
 
-#signup_lightbox_login_text{
+#login_lightbox_login_text{
   padding: 20px 0px;
   text-decoration: none;
   text-align: center;
@@ -39,7 +39,7 @@
 }
 
 
-#signup_lightbox_or_text{
+#login_lightbox_or_text{
 
   padding: 20px 0px 0px 0px;
   text-decoration: none;
@@ -50,12 +50,12 @@
 
 }
 
-input#signup_lightbox_email_box:focus {
+input#login_lightbox_email_box:focus {
   border-color:  #0099cb;
 
 }
 
-input#signup_lightbox_email_box{
+input#login_lightbox_email_box{
   background: url(http://res.cloudinary.com/hpdnx5ayv/image/upload/v1383249432/login-email-image.png) 10px 12px;
   background-repeat: no-repeat;
   border-style: solid;
@@ -64,12 +64,12 @@ input#signup_lightbox_email_box{
 
 }
 
-input#signup_lightbox_password_box:focus{
+input#login_lightbox_password_box:focus{
   border-color:  #0099cb;
 
 }
 
-input#signup_lightbox_password_box{
+input#login_lightbox_password_box{
   background: url(http://res.cloudinary.com/hpdnx5ayv/image/upload/v1383249467/login-password-image.png) 13px 9px;
   background-repeat: no-repeat;
   border-style: solid;
@@ -78,13 +78,13 @@ input#signup_lightbox_password_box{
 }
 
 
-#signup_lightbox input {
+#login_lightbox input {
   width: 296px;
   padding: 13px 13px 13px 50px;
   margin: 10px 73px 10px 10px;
 
 }
-#signup_lightbox input[type=submit]{
+#login_lightbox input[type=submit]{
   font-size:18px;
   width: 362px;
   text-align: center;
@@ -92,11 +92,11 @@ input#signup_lightbox_password_box{
   margin-bottom: 0px;
 }
 
-#signup_lightbox_facebook_btn{
+#login_lightbox_facebook_btn{
   margin: 0px 73px 0px 0px;
 
 }
-#signup_lightbox_forgot_password{
+#login_lightbox_forgot_password{
   font-weight: 14px;
   text-decoration: none;
   font-weight: normal;
