--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,19 +1,16 @@
 <footer class="footer">
   <small>
     <ul>
-      <li><%= link_to 'Product',about_path %> </li>
-      <li><%= link_to 'Team',about_path %>          </li>
-      <li><%= link_to 'Our Story',about_path %>     </li>
-      <li><%= link_to 'Future Plans',about_path %>       </li>
-      <li><%= link_to 'Join The Team',about_path %>       </li>
-      <li><%= link_to 'Partnerships',about_path %>         </li>
-      <li><%= link_to 'Contact Us',about_path %>            </li>
+      <li><%= link_to 'About Us',about_path %> </li>
+      <li><%= link_to 'Blog', "http://blog.mywebroom.com" %></li>
+      <li><%= link_to 'Shop',shop_index_path %> </li>
+      <li><%= link_to 'Help',help_path %> </li>
       <li><a href="javascript:feedback_lightbox();">Send Feedback!</a></li>
-
     </ul>
 
   </small>
   <nav>
-    <span>&copy; Copyright 2012 Rooms Inc. All Rights Reserved</span>
+    <span>&copy; Copyright 2014 Rooms Inc. All Rights Reserved</span>
   </nav>
 </footer>
+
